--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,11 @@
     }
   },
   "AllowedHosts": "*",
-  "MyKey": "Appsetting Json MyKey data"
+  "MyKey": "Appsetting Json MyKey data",
+  {
+    "ConnectionsStrings": {
+      "StudentDbConnection": "server=localhost;database=StudentDB;Trusted_Connection=true" //windows身份验证Trusted_Connection=true"
+    }
+  }
 
 }
