--- a/appsettings.json
+++ b/appsettings.json
@@ -4,12 +4,7 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "MyKey": "Appsetting Json MyKey data",
-  {
-    "ConnectionsStrings": {
-      "StudentDbConnection": "server=localhost;database=StudentDB;Trusted_Connection=true" //windows身份验证Trusted_Connection=true"
-    }
+  "ConnectionStrings": {
+    "StudentDbConnection": "server=localhost;database=StudentDB;Trusted_Connection=true" //windows身份验证
   }
-
 }
